# mentat

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  config.toml.example  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
migrations/: 001_initial_schema.sql  002_skills_schema.sql  003_chat_schema.sql  004_token_usage.sql  005_agent_progress.sql
src/mentat/: __init__.py  config.py  notifications.py
src/mentat/agents/: discovery.py
src/mentat/cli/: main.py
src/mentat/core/: agent.py  approval.py  context_engine.py  data_source.py  goal.py  introspection.py  llm.py  memory.py  skill.py  tool_adapter.py  user_model.py  worker_template.py
src/mentat/data_sources/: claude_session.py  fs.py  git.py
src/mentat/db/: migrate.py  repository.py
src/mentat/web/: app.py  chat.py  router.py
src/mentat/web/templates/: base.html  index.html
src/mentat/web/templates/partials/: active_agents.html  approval_history.html  approvals.html  chat_panel.html  connection_badge.html  project_detail.html  project_list.html  run_detail.html  run_list.html  settings.html  skill_detail.html  skills_list.html  (+2 more)
tests/: conftest.py
tests/agents/: test_discovery.py
tests/core/: test_approval.py  test_introspection.py  test_memory.py  test_notifications.py  test_skill.py  test_worker_template.py
tests/data_sources/: test_claude_session.py  test_fs.py  test_git.py
tests/db/: test_migrate.py  test_repository.py
tests/web/: test_chat.py  test_router.py
workers/templates/: code.md  docs.md  research.md
