[project]
name = "mentat"
version = "0.1.0"
description = "Autonomous multi-agent PM system for solo developers"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "typer[all]>=0.12.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "aiosqlite>=0.20.0",
  "gitpython>=3.1.43",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "aiofiles>=23.0.0",
  "plyer>=2.1.0",
  "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "httpx>=0.27",
  "pytest-cov>=5.0",
]

[project.scripts]
mentat = "mentat.cli.main:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
exclude = ["^src/"]
